package com.sema.automauto.ui.screen

object Tags {
    const val SEARCH = "Search"
    const val FILTER = "filter"
    const val CARS_LIST_VIEW = "cars_list_view"
    const val CARS_LIST_ITEM = "cars_list_item"
}