...
    AlertDialog(
        onDismissRequest = onDismiss,
        title = { Text(text = "Filter Options", style = Typography.h6) },
        text = {
            Column {
                RadioButtonOption(
                    title = "Sort by Price",
                    isSelected = selectedFilter is FilterType.Price,
                    onClick = { selectedFilter = FilterType.Price(SortingType.Descending) }
                )
                RadioButtonOption(
                    title = "Sort by Date",
                    isSelected = selectedFilter is FilterType.Date,
...
                    onClick = { selectedFilter = FilterType.Color(SortingType.Descending) }
                )
            }
        },
        confirmButton = {
            TextButton(onClick = { onApplyFilter(selectedFilter) }) {
                Text("Apply")
            }
        },
        dismissButton = {
            TextButton(onClick = onDismiss) {
                Text("Cancel")
            }
...
